--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Художній музей</title>
     <link
-      rel="favicon"
+      rel="logotip"
       type="image/svg"
-      href="./images/logo-true.svg"
+      href="./images/logotip.svg"
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -50,10 +50,10 @@
               </div>
             </a>
 
-            <div class="header__action">
+            <a href="#events" class="header__action">
               <div class="header__action-line"></div>
               <span class="header__action-text">Події</span>
-            </div>
+            </a>
 
             <div class="header__background-tablet"></div>
           </div>
@@ -79,37 +79,25 @@
 
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Home</a>
+              <a href="#" class="menu__link">Головна сторінка</a>
             </li>
 
             <li class="menu__item">
-              <a href="#about-us" class="menu__link">About us</a>
+              <a href="#events" class="menu__link">Актуальні події</a>
             </li>
 
             <li class="menu__item">
-              <a href="#gallery" class="menu__link">Gallery</a>
+              <a href="#gallery" class="menu__link">Галерея</a>
             </li>
 
             <li class="menu__item">
-              <a href="#testimonials" class="menu__link">Testimonial</a>
+              <a href="#follow" class="menu__link">Підписка</a>
             </li>
 
             <li class="menu__item">
-              <a href="#contact-us" class="menu__link">Contact us</a>
+              <a href="#contact" class="menu__link">Контакти</a>
             </li>
           </ul>
-
-          <a
-            href="tel:+1 234 555-55-55"
-            class="menu__call menu__call--phone">
-            +1 234 555-55-55
-          </a>
-
-          <a
-            href="tel:+1 234 555-55-55"
-            class="menu__call  menu__call--action">
-            call to order
-          </a>
         </div>
       </div>
     </nav>
@@ -122,8 +110,8 @@
           </h2>
 
           <div class="event events__event">
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item--desktop-1-7 grid__item--tablet-1-6">
+            <div class="grid">
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-1-7 grid__item--tablet-1-6">
                 <div class="event__photo-container">
                   <img
                     src="./images/2.png"
@@ -133,7 +121,7 @@
                 </div>
               </div>
 
-              <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-9-12">
+              <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-4 grid__item--desktop-9-12">
                 <div class="event__details">
                   <div class="event__value">
                     <div class="event__meaning">ВИСТАВКА</div>
@@ -150,8 +138,8 @@
           </div>
 
           <div class="event events__event">
-            <div class="grid grid--desktop">
-              <div class="grid__item grid__item--desktop-6-12 grid__item--tablet-1-6 grid__item--second">
+            <div class="grid">
+              <div class="grid__item grid__item--mobile-1-2 grid__item--desktop-6-12 grid__item--tablet-1-6 grid__item--second">
                 <div class="event__photo-container">
                   <img
                     src="./images/3.png"
@@ -161,7 +149,7 @@
                 </div>
               </div>
 
-              <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-1-4 grid__item--first">
+              <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-4 grid__item--desktop-1-4 grid__item--first">
                 <div class="event__details">
                   <div class="event__value">
                     <div class="event__meaning">ВИСТАВКА</div>
@@ -199,7 +187,7 @@
         </div>
       </section>
 
-      <section class="gallery page__section">
+      <section class="gallery page__section" id="gallery">
         <div class="container">
           <h2 class="page__section-title">Галерея</h2>
 
@@ -263,7 +251,7 @@
         </div>
       </section>
 
-      <section class="follow page__section">
+      <section class="follow page__section" id="follow">
         <div class="container">
           <div class="follow__container">
             <h2 class="page__section-title follow__title">Підписка</h2>
@@ -294,71 +282,116 @@
     </main>
 
     <footer class="footer page__footer">
-      <div class="contaner">
-        <div class="footer__buttons">
-          <div class="footer__logo">
-            <a href="#" class="logo">
-              NA
+      <div class="container footer__container"  id="contact">
+        <div class="grid">
+          <div class="footer__buttons grid__item--mobile-1-2 grid__item--tablet-1-1 grid__item--desktop-1-1">
+            <div class="footer__logo">
+              <a href="#" class="logo">
+                NA
+                <br>
+                MU
+              </a>
+            </div>
+            <div class="footer__networks">
+              <a href="#" class="footer__link footer__link-facebook">
+              </a>
+              <a href="#" class="footer__link footer__link-instagram">
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__information grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <div class="footer__info">
+              Графік роботи
               <br>
-              MU
-            </a>
+              <br>
+              <strong>12:00 — 20:00</strong> середа
+              <br>
+              <strong>12:00 — 20:00</strong> четвер
+              <br>
+              <strong>12:00 — 20:00</strong> п’ятниця
+              <br>
+              <strong>11:00 — 19:00</strong> субота
+              <br>
+              <strong>11:00 — 19:00</strong> неділя
+              <br>
+              <br>
+              Вихідні понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
           </div>
-          <div class="footer__networks">
-            <a href="#" class="footer__link footer__link-facebook">
 
-            </a>
-            <a href="#" class="footer__link">
-            </a>
-          </div>
-          <div class="footer__info">
-            Графік роботи
-            <br>
-            <br>
-            12:00
-            — 20:00 середа
-            <br>
-            12:00
-            — 20:00  четвер
-            <br>
-            12:00 — 20:00 п’ятниця
-            <br>
-            11:00 — 19:00 субота
-            <br>
-            11:00 — 19:00 неділя
-            <br>
-            <br>
-            Вихідні понеділок, вівторок
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </div>
-          <div class="footer__contacts">
-            Контакти:
-            <br>
-            <br>
-            вул. М. Грушевського, 6; Київ, 01001
-            <br>
-            тел. +38 (044) 278-13-57
-            <br>
-            факс +38 (044) 278-74-54
-            <br>
-            e-mail: info@namu.kiev.ua
-          </div>
-          <div class="footer__button-top">
-            <img src="./images/arrow-top.svg" alt="arrow top">
-          </div>
-          <div class="footer__line"></div>
-          <div class="footer__nav">
-            <a href="#" class="footer__nav-link">Галерея</a>
+          <div class="grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
 
-            <a href="#" class="footer__nav-link">Виставки та події</a>
+            <div class="footer__contacts">
+              Контакти:
+              <br>
+              <br>
+              <a
+                href="https://goo.gl/maps/Jrw45WVg1J8LoHrK8"
+                class="link"
+                rel="noopener"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br>
+              <a
+                href="tel:+38 (044) 278-13-57"
+                class="link"
+                rel="noopener"
+                target="_blank"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <br>
+              <a
+                href="tel:+38 (044) 278-74-54"
+                class="link"
+                rel="noopener"
+                target="_blank"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <br>
+              <a
+                href="email:info@namu.kiev.ua"
+                class="link"
+                rel="noopener"
+                target="_blank"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
 
-            <a href="#" class="footer__nav-link">Підписка</a>
-
-            <a href="#" class="footer__nav-link">Контакти</a>
           </div>
-          <div class="footer__designer"></div>
+
+
+          <div class="footer__button-top grid__item--mobile-1-2 grid__item--tablet-6-6 grid__item--desktop-12-12">
+            <a href="#" class="footer__button-link"></a>
+          </div>
+
+
+          <div class="footer__line grid__item--mobile-1-2 grid__item--tablet-2-5 grid__item--desktop-7-7"></div>
+
+          <div class="footer__nav grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <a href="#gallery" class="footer__nav-link link">Галерея</a>
+            <a href="#events" class="footer__nav-link link">Виставки та події</a>
+
+          </div>
+
+          <div class="footer__nav grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <a href="#follow" class="footer__nav-link link">Підписка</a>
+            <a href="#contact" class="footer__nav-link link">Контакти</a>
+          </div>
+
+          <div class="footer__design grid__item--mobile-1-2 grid__item--tablet-1-6 grid__item--desktop-1-12">
+            <div class="footer__designer">Designed by Ivanov Oleksii</div>
+            <div class="footer__design-details">Copyright © 2021. All Rights Reserved.</div>
+          </div>
         </div>
-
       </div>
     </footer>
 
