--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Художній музей</title>
     <link
-      rel="logotip"
-      type="image/svg"
-      href="./images/logotip.svg"
+      rel="logo"
+      type="image/png"
+      href="./images/NA MU.png"
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
