--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link
       rel="logo"
       type="image/png"
-      href="./images/NA MU.png"
+      href="images/NAMU.png"
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
