--- a/src/index.html
+++ b/src/index.html
@@ -243,39 +243,101 @@
             Галерея
           </h2>
 
-          <div class="grid grid__desktop grid--gallery">
-            <div class="grid__item grid__item--desktop-1-4">
-              <img
-                src="./images/Rectangle 13.5.png"
-                alt="Картина жінки в національному вбранні"
-                class="gallery__image"
-              >
-            </div>
+          <div class="none">
+            <div class="grid grid--tablet grid--gallery">
+              <div class="grid__item grid__item--desktop-1-4">
+                <img
+                  src="./images/Rectangle 13.5.png"
+                  alt="Картина жінки в національному вбранні"
+                  class="gallery__image"
+                >
+              </div>
 
-            <div class="grid__item grid__item--desktop-5-12">
-              <img
-                src="./images/Rectangle 3.1.png"
-                alt="Засніжене українське село"
-                class="gallery__image"
-              >
-            </div>
+              <div class="grid__item grid__item--desktop-5-12">
+                <img
+                  src="./images/Rectangle 3.1.png"
+                  alt="Засніжене українське село"
+                  class="gallery__image"
+                >
+              </div>
 
-            <div class="grid__item grid__item--desktop-1-8">
-              <img
-                src="./images/Rectangle 13.3.png"
-                alt="Картина дівчинка на лавці"
-                class="gallery__image"
-              >
-            </div>
+              <div class="grid__item grid__item--desktop-1-8">
+                <img
+                  src="./images/Rectangle 13.3.png"
+                  alt="Картина дівчинка на лавці"
+                  class="gallery__image"
+                >
+              </div>
 
-            <div class="grid__item grid__item--desktop-9-12">
+              <div class="grid__item grid__item--desktop-9-12">
+                <img
+                  src="./images/Rectangle 13.4.png"
+                  alt="Картина моря"
+                  class="gallery__image"
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="slider">
+            <div class="slider__selectors grid grid--tablet">
+              <input
+                type="radio"
+                name="radio"
+                id="select-1"
+                value="1"
+                class="slider__selector--input"
+                checked
+              >
               <img
-                src="./images/Rectangle 13.4.png"
-                alt="Картина моря"
-                class="gallery__image"
+                src="./images/Rectangle 13.9.png" alt="Картина жінки в національному вбранні"
+                class="slider__picture slider__picture--1"
+              >
+
+              <input
+                type="radio"
+                name="radio"
+                id="select-2"
+                value="2"
+                class="slider__selector--input"
+              >
+              <img
+                src="./images/Rectangle 24.1.png" alt="Гуси"
+                class="slider__picture slider__picture--2"
+              >
+
+              <input
+                type="radio"
+                name="radio"
+                id="select-3"
+                value="3"
+                class="slider__selector--input"
+              >
+              <img
+                src="./images/Rectangle 3.1.png" alt="Засніжений український будинок"
+                class="slider__picture slider__picture--3"
+              >
+
+              <input
+                type="radio"
+                name="radio"
+                id="select-4"
+                value="4"
+                class="slider__selector--input"
+              >
+              <img
+                src="./images/Rectangle 13.4.png" alt="Морський пейзаж"
+                class="slider__picture slider__picture--4"
               >
             </div>
           </div>
+        </div>
+
+        <div class="slider__menu">
+          <label for="select-1" class="slider__button"></label>
+          <label for="select-2" class="slider__button"></label>
+          <label for="select-3" class="slider__button"></label>
+          <label for="select-4" class="slider__button"></label>
         </div>
       </section>
 
