--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Художній музей</title>
     <link
-      rel="logo"
-      type="image/png"
+      rel="icon"
+      type="image/x-icon"
       href="images/NAMU.png"
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
