--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
               музей
             </h1>
 
-            <a href="#" class="header__tickets">
+            <a href="#events" class="header__tickets">
               <div class="header__tickets-signature">
                 Квитки
               </div>
