--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NAMU</title>
+    <link rel="stylesheet" href="./styles/index.scss">
     <script type="text/javascript" src="scripts/main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
@@ -15,14 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="./images/namuLogo.png">
   </head>
-  <body class="page__body">
+  <body class="body">
     <header class="header">
       <div class="header__nav">
         <a href="#menu" class="header__menu-opener"></a>
 
-        <a href="#" class="logo">
+        <a href="#" class="header__logo">
           <img
-            class="logo__img"
+            class="header__logo-img"
             src="images/namuLogo.png"
             alt="namu">
         </a>
@@ -31,13 +31,13 @@
       </div>
     </header>
 
-    <nav class="page__menu menu" id="menu">
+    <nav class="menu" id="menu">
       <div class="menu__header">
         <a href="#" class="menu__header-cross">X</a>
 
-        <a href="#" class="logo">
+        <a href="#" class="header__logo">
           <img
-          class="logo__img"
+          class="header__logo-img"
           src="images/namuLogo.png"
           alt="namu logo">
         </a>
@@ -92,111 +92,176 @@
         </li>
 
         <li class="menu__item">
-          <a href="#" class="menu__link">
+          <a href="#footer" class="menu__link">
             Контакти
           </a>
         </li>
       </ul>
     </nav>
 
-    <main>
-      <section class="page__section">
-        <h1 class="page__section-title h1">
-          ХУДОЖНІЙ МУЗЕЙ
+    <main class="main">
+      <section class="section">
+        <h1 class="section__title-h1">
+          ХУДОЖ<span class="section__title-h1-transparent-text">НІЙ</span>
+          <br>
+          МУЗЕЙ
         </h1>
 
-        <a href="#" class="ticket">
-          <div class="ticket__title">КВИТКИ</div>
-          <div class="ticket__square">></div>
+        <a href="#" class="main__ticket">
+          <div class="main__ticket-title">КВИТКИ</div>
+          <div class="main__ticket-square">></div>
         </a>
       </section>
 
-      <section class="page__section">
-        <h2 class="page__section-title h2">
-          Актуальні
-          <br>
-          події
-        </h2>
+      <section class="section">
+        <div class="grid grid--desktop">
+          <h2 class="section__title-h2">
+            Актуальні події
+          </h2>
 
-        <div class="img-mob img-mob__1"></div>
-
-        <div class="action-date">
-          <div class="action-date__title">
-            ВИСТАВКА
+          <div class="grid__item grid__item--1-7">
+            <div class="img img__1"></div>
           </div>
-          <div class="action-date__time">
-            26.08-29.11.2019
+
+          <div class="grid__item grid__item--9-13">
+            <div class="section__action-date">
+              <div class="section__action-date--title">
+                ВИСТАВКА
+              </div>
+              <div class="section__action-date--time">
+                26.08-29.11.2019
+              </div>
+            </div>
+
+            <h3 class="section__subtitle">
+              <div>
+                Йду і повертаюсь
+              </div>
+              <div class="section__red-square"></div>
+            </h3>
+
+            <p class="section__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+
+          <div class="img img__2 img__desktop-off"></div>
+
+          <div class="grid__item grid__item--1-4">
+            <div class="section__action-date">
+              <div class="section__action-date--title">
+                ВИСТАВКА
+              </div>
+              <div class="section__action-date--time">
+                26.08-29.11.2019
+              </div>
+            </div>
+
+            <h3 class="section__subtitle">
+              <div>
+                І спогади і мрії
+              </div>
+              <div class="section__red-square"></div>
+            </h3>
+
+            <p class="section__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+
+          <div class="grid__item grid__item--6-13">
+            <div class="img img__2 img__mobile-off"></div>
           </div>
         </div>
-
-        <h3 class="page__section-subtitle">
-          <div>
-            Йду і повертаюсь
-          </div>
-          <div class="red-square"></div>
-        </h3>
-
-        <p class="page__section-text">
-          Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-        </p>
-
-        <div class="img-mob img-mob__2"></div>
-
-        <div class="action-date">
-          <div class="action-date__title">
-            ВИСТАВКА
-          </div>
-          <div class="action-date__time">
-            26.08-29.11.2019
-          </div>
-        </div>
-
-        <h3 class="page__section-subtitle">
-          <div>
-            І спогади і мрії
-          </div>
-          <div class="red-square"></div>
-        </h3>
-
-        <p class="page__section-text">
-          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-        </p>
       </section>
 
-      <section class="page__section page__section-special-margin">
-        <div class="img-mob img-mob__3"></div>
-        <div class="toUp">
-          <div class="fromTo">
-            <div class="fromTo__date">
-              <div class="action-date__title">
+      <section class="section section__special-margin">
+        <div class="img img__3"></div>
+        <div class="section__toUp">
+          <div class="section__fromTo">
+            <div class="section__fromTo--date">
+              <div class="section__action-date--title">
                 ЛЕКЦІЯ
               </div>
-              <div class="action-date__time">
+              <div class="section__action-date--time">
                 26/08/2019 - 11:00
               </div>
             </div>
-            <h3 class="page__section-title--w400">
+            <h3 class="section__title-w400">
               Від класицизму до романтизму
             </h3>
           </div>
         </div>
       </section>
 
-      <section class="page__section">
-        <h1 class="page__section-title">
+      <section class="section">
+        <h2 class="section__title-h2">
           Галерея
-        </h1>
+        </h2>
 
-        <div class="img-mob img-mob__4"></div>
+        <div class="gallery">
+          <img
+            src="./images/gall-1.png"
+            alt=""
+            class="gallery--1 img__desktop-off"
+          >
+
+          <img
+            src="./images/gall-mob-2.png"
+            alt=""
+            class="gallery--2 img__desktop-off"
+          >
+
+          <img
+            src="./images/gall-mob-2.png"
+            alt=""
+            class="gallery--2 img__desktop-off"
+          >
+
+          <div class="grid">
+            <div class="grid__item grid__item--1-4">
+              <img
+                src="./images/gall-1.png"
+                alt=""
+                class="gallery__desktop-row-1"
+              >
+            </div>
+
+            <div class="grid__item grid__item--5-13">
+              <img
+                src="./images/gall-2.png"
+                alt=""
+                class="gallery__desktop-row-1"
+              >
+            </div>
+
+            <div class="grid__item grid__item--1-8">
+              <img
+                src="./images/gall-3.png"
+                alt=""
+                class="gallery__desktop-row-2"
+              >
+            </div>
+
+            <div class="grid__item grid__item--9-13">
+              <img
+                src="./images/gall-4.png"
+                alt=""
+                class="gallery__desktop-row-2"
+              >
+            </div>
+          </div>
+        </div>
+
         <div class="slider">
-          <div class="slider__1"></div>
-          <div class="slider__2"></div>
-          <div class="slider__3"></div>
-          <div class="slider__4"></div>
+          <div class="slider__1 img__desktop-off"></div>
+          <div class="slider__2 img__desktop-off"></div>
+          <div class="slider__3 img__desktop-off"></div>
+          <div class="slider__4 img__desktop-off"></div>
         </div>
       </section>
 
-      <section class="page__section">
+      <section class="section">
         <div class="subscribe">
           <h2 class="subscribe__title">
             Підписка
@@ -206,7 +271,11 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
 
-          <form action="" class="subscribe__form">
+          <form
+            action="/"
+            method="GET"
+            class="subscribe__form"
+          >
             <input
               type="email"
               name="email"
@@ -219,31 +288,31 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="footer__header">
         <a
           href="#"
-          class="footer__logo link">
-          <img src="./images/namuLogo.png"  alt="logo">
+          class="footer__logo body__link">
+          <img src="./images/namuLogo.png" alt="logo">
         </a>
 
         <div class="footer__icons">
-          <a href="#" class="link">
+          <a href="#" class="body__link">
             <img src="./images/fbLogo.png" alt="facebook">
           </a>
 
-          <a href="#" class="link">
+          <a href="#" class="body__link">
             <img
               src="./images/inst.png"
               alt="instagram"
-              class="instagram-link"
+              class="footer__instagram-link"
             >
           </a>
         </div>
       </div>
 
-      <div class="contacts-us">
-        <p class="contacts-us__work-time">
+      <div class="footer__contacts-us">
+        <p class="footer__contacts-us--work-time">
           Графік роботи:
           <br>
           <br>
@@ -263,7 +332,7 @@
           Каса припиняє роботу за 1 годину до закриття музею.
         </p>
 
-        <p class="contacts-us__contacts">
+        <p class="footer__contacts-us--contacts">
           Контакти:
           <br>
           <br>
@@ -275,6 +344,44 @@
           <br>
           e-mail: info@namu.kiev.ua
         </p>
+      </div>
+
+      <div class="footer__scroll">
+        <a href="#">
+          <div class="footer__scroll-border">
+            <img
+              src="./images/scroll.png"
+              alt="scroll up"
+              class="footer__scroll-img"
+            >
+          </div>
+        </a>
+      </div>
+
+      <div class="footer__down-line"></div>
+
+      <div class="footer__down-nav">
+        <div class="footer__down-nav--1st-colmn">
+          <a href="#" class="body__link">
+            Галерея
+          </a>
+          <br>
+          <br>
+          <a href="#" class="body__link">
+            Виставки та події
+          </a>
+        </div>
+
+        <div class="footer__down-nav--2nd-colmn">
+          <a href="#" class="body__link">
+            Про Нас
+          </a>
+          <br>
+          <br>
+          <a href="#" class="body__link">
+            Контакти
+          </a>
+        </div>
       </div>
     </footer>
   </body>
