--- a/src/index.html
+++ b/src/index.html
@@ -42,62 +42,6 @@
           </a>
         </div>
       </div>
-
-      <!-- <div class="container">
-        <div class="header__content">
-          <div class="top-bar">
-            <a href="#" class="top-bar__menu menu ">
-              <img src="./images/Vector.svg" alt="menu">
-            </a>
-
-            <a href="#" class="top-bar__logo logo">
-              NA
-              <br>
-              MU
-            </a>
-          </div>
-
-          <div class="grid grid--tablet">
-            <div class="grid__item grid__item--tablet-3-6 grid__item--desktop-6-12">
-              <div
-                class="header__photo"
-                alt="Фасад національного художнього музею"
-              >
-                <img
-                  src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
-                  alt="Фасад національного художнього музею"
-                  class="header__image"
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="grid grid--tablet">
-            <div class="grid__item grid__item--tablet-1-4 grid__item--desktop-3-7">
-              <h1 class="header__title title">
-                Худож<span class="header__title title-trans">ній</span>
-                <br>
-                музей
-              </h1>
-            </div>
-
-            <div class="grid__item grid__item--tablet-1-3 grid__item--desktop-3-7">
-              <a href="#" class="header__button button">
-                <div class="button__field">Квитки</div>
-                <div class="button__icon">
-                  <img src="./images/button-icon.svg" alt="link to tickets">
-                </div>
-              </a>
-            </div>
-          </div>
-
-
-          <div class="left-side-mark">
-            <div class="left-side-mark__line"></div>
-            <div class="left-side-mark__text">Події</div>
-          </div>
-        </div>
-      </div> -->
     </header>
 
     <header class="header--tablet">
@@ -105,7 +49,6 @@
         <div class="grid__item--tablet-1-1">
           <div class="top-bar">
             <a href="#menu" class="top-bar__menu menu leftm top65">
-              <!-- <img src="./images/Vector.svg" alt="menu"> -->
             </a>
           </div>
         </div>
@@ -138,7 +81,7 @@
                 музей
               </h1>
 
-              <a href="#" class="header__button button">
+              <a href="#events" class="header__button button">
                 <div class="button__field">Квитки</div>
                 <div class="button__icon">
                   <img src="./images/button-icon.svg" alt="link to buy tickets">
