--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,433 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      href="./images/icons/favicon.ico"
+      type="image/x-icon"
+    >
+    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin=""
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header page__header">
+      <picture class="header__background">
+        <source
+          media="(min-width:1280px)"
+          srcset="./images/desktop/header-desktop.svg"
+          type="image/svg+xml"
+        >
+        <source
+          type="image/svg+xml"
+          srcset="./images/tablet/header-tablet.svg"
+          media="(min-width:768px)"
+        >
+        <img
+          src="./images/desktop/header-desktop.svg"
+          alt="header-background"
+        >
+      </picture>
+      <div class="container">
+        <div class="header__content grid ">
+          <div class="header__nav grid__item--tablet-1-6 grid__item--desktop-1-12">
+            <a href="#menu">
+              <img src="./images/menu.svg" alt="menu">
+            </a>
+            <a href="#" class="header__logo-link logo-link">
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+
+          <h1 class="header__title grid__item--tablet-1-4 grid__item--desktop-3-8">
+            Худож<span class="header__title-text-part">ній</span>
+            <br>
+            музей
+          </h1>
+          <a class="link header__link grid__item--tablet-1-3 grid__item--desktop-3-5" href="#">
+            <span class="link__info">Квитки</span>
+            <svg
+              class="link__image"
+              width="8" height="12"
+              viewBox="0 0 8 12"
+              fill="black"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z" fill="white">
+            </svg>
+          </a>
+          <span class="header__events-text grid__item--desktop-1-1">
+            Події
+          </span>
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#"
+              class=""
+            >
+              <img src="./images/cross.svg" alt="cross-item">
+            </a>
+
+            <a href="#" class="menu__logo-link logo-link">
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Головна</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contact-us" class="menu__link">Квитки</a>
+            </li>
+          </ul>
+
+          <a
+            href="tel:+1 234 555-55-55"
+            class="menu__call menu__call--phone"
+          >
+            +1 234 555-55-55
+          </a>
+
+          <a
+            href="tel:+1 234 555-55-55"
+            class="menu__call menu__call--action"
+          >
+            call to order tickets
+          </a>
+        </div>
+      </div>
+    </nav>
+
+
+    <main class="page__main">
+      <section class="events">
+        <div class="container">
+          <h2 class="events__title">
+              Актуальні
+            <br class="events__brake-title">
+              події
+          </h2>
+          <div class="events__content grid grid--desktop" id="exhibitions">
+            <picture class="events__picture grid__item--desktop-1-7">
+              <source
+                media="(min-width:1280px)"
+                srcset="./images/desktop/picture1-desktop.svg"
+                type="image/svg+xml"
+              >
+              <source
+                media="(min-width:768px)"
+                srcset="./images/tablet/picture1-tablet.svg"
+                type="image/svg+xml"
+              >
+              <img
+                src="./images/mobile/picture1-mobile.svg"
+                alt="Picture Art first"
+                class="events__picture"
+              >
+            </picture>
+
+            <div class="events__text-block grid__item--desktop-9-12">
+              <p class="events__event-type">
+                Виставка
+                <span class="events__date">
+                  26.08-29.11.2019
+                </span>
+              </p>
+              <h3 class="events__event">
+                Йду і повертаюсь
+              </h3>
+              <p class="events__article">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+
+            <picture class="events__picture grid__item--desktop-7-12">
+              <source
+                media="(min-width:1280px)"
+                srcset="./images/desktop/picture2-desktop.svg"
+                type="image/svg+xml"
+              >
+              <source
+                media="(min-width:768px)"
+                srcset="./images/tablet/picture2-tablet.svg"
+                type="image/svg+xml"
+              >
+              <img
+                src="./images/mobile/picture2-mobile.svg"
+                alt="Picture Art first"
+                class="events__picture"
+              >
+            </picture>
+
+            <div class="events__text-block grid__item--desktop-1-4">
+              <p class="events__event-type">
+                Виставка
+                <span class="events__date">
+                  26.08-29.11.2019
+                </span>
+              </p>
+              <h3 class="events__event">
+                І спогади і мрії
+              </h3>
+              <article class="events__article">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </article>
+            </div>
+
+          </div>
+        </div>
+
+        <picture class="events__picture">
+          <source
+            media="(min-width:1280px)"
+            srcset="./images/desktop/picture3-desktop.svg"
+            type="image/svg+xml"
+          >
+          <source
+            media="(min-width:768px)"
+            srcset="./images/tablet/picture3-tablet.svg"
+            type="image/svg+xml"
+          >
+          <img
+            src="./images/mobile/picture3-mobile.svg"
+            alt="Picture Art first"
+            class="events__picture"
+          >
+        </picture>
+
+        <div class="container">
+          <div class="events__lection">
+            <p class="events__event-type">
+              Лекція
+              <span class="events__date">
+                26/08/2019 - 11:00
+              </span>
+            </p>
+            <h3 class="events__event">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="page__gallery gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+          <div class="gallery__slider slider">
+            <img
+              src="./images/desktop/gallery/picture1-gallery-desktop.svg"
+              alt="picture slider"
+              class="slider__image"
+            >
+            <img
+              src="./images/desktop/gallery/picture2-gallery-desktop.svg"
+              alt="picture slider"
+              class="slider__image"
+            >
+            <img
+              src="./images/desktop/gallery/picture3-gallery-desktop.svg"
+              alt="picture slider"
+              class="slider__image"
+            >
+            <img
+              src="./images/desktop/gallery/picture4-gallery-desktop.svg"
+              alt="picture slider"
+              class="slider__image"
+            >
+            <img
+              src="./images/tablet/gallery-slider/picture1-gallery-tablet.svg"
+              alt="picture slider mobile"
+              class="slider__image"
+            >
+            <img
+              src="./images/tablet/gallery-slider/picture2-gallery-tablet.svg"
+              alt="picture slider mobile"
+              class="slider__image"
+            >
+            <img
+            src="./images/mobile/picture-gallery-mobile.svg"
+            alt="picture slider mobile"
+            class="slider__image"
+          >
+          </div>
+          <div class="slider__dots-container">
+            <div class="slider__dots"></div>
+            <div class="slider__dots"></div>
+            <div class="slider__dots"></div>
+            <div class="slider__dots"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__subscribtion subscribtion" id="email">
+        <picture class="subscribtion__background">
+          <source
+            media="(min-width:1280px)"
+            srcset="./images/desktop/picture-subscribe-desktop.svg"
+            type="image/svg+xml"
+          >
+          <source
+            media="(min-width:768px)"
+            srcset="./images/tablet/picture-subscribe-tablet.svg"
+            type="image/svg+xml"
+          >
+          <source
+            media="(min-width:320px)"
+            srcset="./images/mobile/picture-subscribe-mobile.svg"
+            type="image/svg+xml"
+          >
+          <img
+            src="./images/mobile/picture-subscribe-mobile.svg"
+            alt="subscribtion backgound"
+          >
+        </picture>
+        <div class="container subscribtion__container">
+          <div class="subscribtion__content">
+            <h2 class="subscribtion__title">
+              Підписка
+            </h2>
+            <p class="subscribtion__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action=""
+              method="get"
+              class="subscribtion__form"
+            >
+              <label for="e-mail" class="subscribtion__input-container">
+                <input
+                  type="email"
+                  name="email"
+                  id="e-mail"
+                  class="subscribtion__input"
+                  placeholder="E-mail"
+                >
+                <button class="subscribtion__submit" type="submit">
+                  <svg
+                      class="subscribtion__submit-image"
+                      width="8" height="12"
+                      viewBox="0 0 8 12"
+                      fill="black"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                    <path d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z" fill="black">
+                  </svg>
+                </button>
+              </label>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page__footer footer">
+      <div class="container">
+        <div class="footer__content grid">
+          <div class="footer__links grid__item--tablet-1-1">
+            <a href="#" class="footer__logo-link logo-link">
+              NA
+              <br>
+              MU
+            </a>
+            <div class="footer__soc-links2 grid__item--tablet-1-1">
+              <a href="https://www.facebook.com/namu.museum/" class="footer__link">
+                <img src="./images/icons/facebook.svg" alt="fb-link">
+              </a>
+
+              <a href="https://www.instagram.com/namu.museum/?hl=ru" class="footer__link">
+                <img src="./images/icons/instagram.svg" alt="inst-link">
+              </a>
+            </div>
+          </div>
+          <hr class="footer__separate grid__item--desktop-7-7">
+          <div class="footer__soc-links1 grid__item--tablet-1-1">
+            <a href="https://www.facebook.com/namu.museum/" class="footer__link">
+              <img src="./images/icons/facebook.svg" alt="fb-link">
+            </a>
+
+            <a href="https://www.instagram.com/namu.museum/?hl=ru" class="footer__link">
+              <img src="./images/icons/instagram.svg" alt="inst-link">
+            </a>
+          </div>
+          <section class="footer__work-hours grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <h4 class="footer__heading">
+              Графік роботи:
+            </h4>
+
+            <p class="footer__text">
+              <span>12:00 — 20:00</span> середа
+              <br>
+              <span>12:00 — 20:00</span> четвер
+              <br>
+              <span>12:00 — 20:00</span> п’ятниця
+              <br>
+              <span>11:00 — 19:00</span> субота
+              <br>
+              <span>11:00 — 19:00</span> неділя
+              <br>
+              <br>
+              <span>Вихідні</span>:
+              <br>
+              понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </section>
+          <section class="footer__contacts grid__item--tablet-4-5 grid__item--desktop-5-6">
+            <h4 class="footer__heading">
+              Контакти:
+            </h4>
+
+            <p class="footer__text">
+              вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              <br>
+              e-mail: info@namu.kiev.ua
+            </p>
+          </section>
+          <ul class="footer__nav grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <li><a href="#gallery" class="footer__nav-link">Галерея</a></li>
+            <li><a href="#exhibitions" class="footer__nav-link">Виставки та події</a></li>
+          </ul>
+          <ul class="footer__nav grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <li><a href="#email" class="footer__nav-link">Про Нас</a></li>
+            <li><a href="#email" class="footer__nav-link">Контакти</a></li>
+          </ul>
+          <span class="footer__rights grid__item--tablet-1-2">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
