--- a/src/index.html
+++ b/src/index.html
@@ -293,9 +293,19 @@
               </a>
             </div>
             <div class="footer__networks">
-              <a href="#" class="footer__link footer__link-facebook">
+              <a
+                href="#"
+                class="footer__link footer__link-facebook"
+                target="_blank"
+                rel="noopener"
+              >
               </a>
-              <a href="#" class="footer__link footer__link-instagram">
+              <a
+                href="#"
+                class="footer__link footer__link-instagram"
+                target="_blank"
+                rel="noopener"
+              >
               </a>
             </div>
           </div>
