--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
+
     <header class="header">
       <div class="grid grid--onTablet grid--onDesktop">
         <div class="grid__item grid__item--onTablet-1-1 grid__item--onDesktop-1-1">
@@ -190,7 +191,7 @@
                 <img
                   src="images/photo-collection__photo1.jpg"
                   alt="photo 1"
-                  class="photo-collection__photo"
+                  class="photo-collection__photo photo-collection__photo--1"
                   id="photo-1"
                 >
               </div>
@@ -198,7 +199,7 @@
                 <img
                   src="images/photo-collection-desktop2.jpg"
                   alt="photo 2"
-                  class="photo-collection__photo"
+                  class="photo-collection__photo photo-collection__photo--2"
                 >
               </div>
 
@@ -206,7 +207,7 @@
                 <img
                   src="images/photo-collection-desktop3.jpg"
                   alt="photo 3"
-                  class="photo-collection__photo"
+                  class="photo-collection__photo photo-collection__photo--3"
                 >
               </div>
 
@@ -214,16 +215,15 @@
                 <img
                   src="images/photo-collection-desktop4.jpg"
                   alt="photo 4"
-                  class="photo-collection__photo"
+                  class="photo-collection__photo photo-collection__photo--4"
                 >
               </div>
-
-              <img
+            </div>
+            <img
                 src="images/photo-collection-tablet2.jpg"
                 alt="photo 4"
                 class="photo-collection__photo--tablet-photo2"
               >
-            </div>
           </div>
 
 
