ready to change

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
       <div class="container">
         <div class="header__content">
           <div class="header__nav">
-            <a href="#menu" class="icon1 icon--menu1 header__menu-opener"></a>
-            <a href="#" class="emblem header__emblem">
+            <a href="#menu" class="header__menu-opener"></a>
+            <a href="#" class="header__emblem">
               NA
               <br>
               MU
@@ -91,7 +91,7 @@
             </div>
             <div class="grid__item grid__item--desktop-1-7">
               <img
-                src="images/Rectangle 2.1.png"
+                src="images/events/events_1.png"
                 alt="mountains"
                 class="events__exhibition-picture"
               >
@@ -113,7 +113,7 @@
             </div>
 
             <img
-              src="images/Rectangle 4.1.png"
+              src="images/events/events_2.png"
               alt="mountains"
               class="events__exhibition-picture grid__item grid__item--desktop-5-12"
             >
@@ -251,7 +251,7 @@
             </div>
           </div>
 
-          <div class="footer__information grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+          <div class="footer__information grid__item--1-1 grid__item--tablet-3-4 grid__item--desktop-3-4">
             <div class="footer__info">
               Графік роботи
               <br>
@@ -274,7 +274,7 @@
             </div>
           </div>
 
-          <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+          <div class="grid__item--2-2 grid__item--tablet-5-6 grid__item--desktop-5-6">
 
             <div class="footer__contacts">
               Контакти:
@@ -320,7 +320,7 @@
           </div>
 
 
-          <div class="footer__button-top grid__item--1-2 grid__item--tablet-6-6 grid__item--desktop-12-12">
+          <div class="footer__button-top grid__item--1-2">
             <a href="#" class="footer__button-link">
               <svg
                 width="10"
@@ -339,15 +339,15 @@
           </div>
 
 
-          <div class="footer__line grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7"></div>
+          <div class="footer__line grid__item--1-2 grid__item--tablet-3-6 grid__item--desktop-7-7"></div>
 
-          <div class="footer__nav grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+          <div class="footer__nav grid__item--1-1 grid__item--tablet-3-4 grid__item--desktop-8-9">
             <a href="#gallery" class="footer__nav-link">Галерея</a>
             <a href="#events" class="footer__nav-link">Виставки та події</a>
 
           </div>
 
-          <div class="footer__nav grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+          <div class="footer__nav grid__item--2-2 grid__item--tablet-5-6 grid__item--desktop-10-11">
             <a href="#" class="footer__nav-link">Про нас</a>
             <a href="#contacts" class="footer__nav-link">Контакти</a>
           </div>
