--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,16 @@
       type="image/x-icon"
       href="../src/images/favicon.svg"
     >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin=""
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body body">
@@ -69,7 +79,7 @@
         <div class="menu__content">
           <div class="menu__top-actions">
             <a
-              href="/"
+              href="#"
               class="menu__icon-cross"
             >
             </a>
