--- a/src/index.html
+++ b/src/index.html
@@ -54,10 +54,10 @@
         </div>
 
         <div class="grid__item--tablet-1-1 grid--left-side-mark leftm">
-          <div class="left-side-mark">
+          <a href="#events" class="left-side-mark">
             <div class="left-side-mark__line"></div>
             <div class="left-side-mark__text">Події</div>
-          </div>
+          </a>
         </div>
 
         <div class="grid__item--tablet-3-6 grid__item--desktop-6-12 item--header">
@@ -81,7 +81,7 @@
                 музей
               </h1>
 
-              <a href="#events" class="header__button button">
+              <a href="#events" class="header__button button button--buy">
                 <div class="button__field">Квитки</div>
                 <div class="button__icon">
                   <img src="./images/button-icon.svg" alt="link to buy tickets">
@@ -128,7 +128,7 @@
               <a href="#submit" class="menu__link">Підписка</a>
             </li>
             <li class="menu__item">
-              <a href="#contactі" class="menu__link">Контакти</a>
+              <a href="#contacts" class="menu__link">Контакти</a>
             </li>
           </ul>
         </div>
