--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,8 @@
         </h2>
 
         <div class="exhibitions">
-          <div class="grid grid--onDesktop">
-            <div class="exhibitions__photo-container">
+          <div class="exhibitions__container">
+            <div class="exhibitions__photo-container exhibitions__photo-container--first">
               <img
                 src="images/exhibition__photo1.jpg"
                 alt="photo 1"
@@ -91,62 +91,60 @@
               >
             </div>
 
-            <div class="grid__item grid__item--onDesktop-9-12">
-              <div class="exhibitions__info-container">
-                <div class="exhibitions__type-n-date">
-                  <div class="exhibitions__type">
-                    Виставка
-                  </div>
 
-                  <div class="exhibitions__date">
-                    26.08-29.11.2019
-                  </div>
+            <div class="exhibitions__info-container">
+              <div class="exhibitions__type-n-date">
+                <div class="exhibitions__type">
+                  Виставка
                 </div>
 
-                <div class="exhibitions__name">
-                  Йду і повертаюсь
+                <div class="exhibitions__date">
+                  26.08-29.11.2019
                 </div>
+              </div>
 
-                <div class="exhibitions__about">
-                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-                </div>
+              <div class="exhibitions__name">
+                Йду і повертаюсь
+              </div>
+
+              <div class="exhibitions__about">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
               </div>
             </div>
           </div>
 
-          <div class="grid grid--onDesktop">
-            <div class="grid__item grid__item--onDesktop-6-12">
-              <div class="exhibitions__photo-container">
-                <img
-                  src="images/exhibitions__photo2.jpg"
-                  alt="photo 2"
-                  class="exhibitions__photo"
-                >
-              </div>
+
+
+          <div class="exhibitions__container">
+            <div class="exhibitions__photo-container exhibitions__photo-container--second">
+              <img
+                src="images/exhibitions__photo2.jpg"
+                alt="photo 2"
+                class="exhibitions__photo"
+              >
             </div>
 
-            <div class="grid__item grid__item--onDesktop-1-4">
-              <div class="exhibitions__info-container">
-                <div class="exhibitions__type-n-date">
-                  <div class="exhibitions__type">
-                    Виставка
-                  </div>
-
-                  <div class="exhibitions__date">
-                    26.08-29.11.2019
-                  </div>
+            <div class="exhibitions__info-container">
+              <div class="exhibitions__type-n-date">
+                <div class="exhibitions__type">
+                  Виставка
                 </div>
 
-                <div class="exhibitions__name">
-                  І спогади і мрії
+                <div class="exhibitions__date">
+                  26.08-29.11.2019
                 </div>
+              </div>
 
-                <div class="exhibitions__about">
-                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-                </div>
+              <div class="exhibitions__name">
+                І спогади і мрії
+              </div>
+
+              <div class="exhibitions__about">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </div>
             </div>
           </div>
+
         </div>
       </div>
 
@@ -271,14 +269,14 @@
               </a>
 
               <div class="footer__socials">
-                <a href="https://www.facebook.com/">
+                <a href="https://www.facebook.com/" class="footer__socials-icons">
                   <img
                   src="images/socials__fb.svg"
                   alt="facebook"
                 >
                 </a>
 
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/" class="footer__socials-icons">
                   <img
                   src="images/socials__ig.svg"
                   alt="instagram"
@@ -310,13 +308,13 @@
                 Контакти:
                 <br>
                 <br>
-                вул. М. Грушевського, 6; Київ, 01001
+                вул. <a href="https://goo.gl/maps/KazKTZGoJfM7RMbm9" class="footer__link">М. Грушевського, 6; Київ, 01001</a>
                 <br>
-                тел. +38 (044) 278-13-57
+                тел. <a href="tel:+380442781357" class="footer__link">+38 (044) 278-13-57</a>
                 <br>
-                факс +38 (044) 278-74-54
+                факс <a href="tel:+380442787454" class="footer__link">+38 (044) 278-74-54</a>
                 <br>
-                e-mail: info@namu.kiev.ua
+                e-mail: <a href="mailto:info@namu.kiev.ua" class="footer__link">info@namu.kiev.ua</a>
               </div>
 
               <div class="grid__item grid__item--onDesktop-12-12">
