--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             музей
           </h1>
 
-          <a href="#events" class="header__button button">
+          <a href="#events" class="header__button button button--buy">
             <div class="button__field">Квитки</div>
             <div class="button__icon">
               <img src="./images/button-icon.svg" alt="link to tickets">
@@ -270,66 +270,55 @@
                 name="radio"
                 id="select-1"
                 value="1"
-                class="slider__selector--input"
+                class="slider__selector--input slider__selector--input--1"
                 checked
               >
-              <div class="slider__picture slider__picture--1">
-                <img
-                  src="./images/Rectangle 13.9.png" alt="Картина жінки в національному вбранні"
-                  class="slider__image slider__image--1"
-                >
-              </div>
+              <img
+                src="./images/Rectangle 13.9.png" alt="Картина жінки в національному вбранні"
+                class="slider__picture slider__picture--1"
+              >
+              <label for="select-1" class="slider__button slider__button--active slider__button--1"></label>
 
               <input
                 type="radio"
                 name="radio"
                 id="select-2"
                 value="2"
-                class="slider__selector--input"
+                class="slider__selector--input slider__selector--input--2"
               >
-              <div class="slider__picture slider__picture--2">
-                <img
-                  src="./images/Rectangle 24.1.png" alt="Гуси"
-                  class="slider__image slider__image--2"
-                >
-              </div>
+              <img
+                src="./images/Rectangle 24.1.png" alt="Гуси"
+                class="slider__picture slider__picture--2"
+              >
+              <label for="select-2" class="slider__button slider__button--2"></label>
 
               <input
                 type="radio"
                 name="radio"
                 id="select-3"
                 value="3"
-                class="slider__selector--input"
+                class="slider__selector--input slider__selector--input--3"
               >
-              <div class="slider__picture slider__picture--3">
-                <img
-                  src="./images/Rectangle 3.1.png" alt="Засніжений український будинок"
-                  class="slider__image slider__image--3"
-                >
-              </div>
+              <img
+                src="./images/Rectangle 3.1.png" alt="Засніжений український будинок"
+                class="slider__picture slider__picture--3"
+              >
+              <label for="select-3" class="slider__button slider__button--3"></label>
 
               <input
                 type="radio"
                 name="radio"
                 id="select-4"
                 value="4"
-                class="slider__selector--input"
+                class="slider__selector--input slider__selector--input--4"
               >
-              <div class="slider__picture slider__picture--4">
-                <img
-                  src="./images/Rectangle 13.4.png" alt="Морський пейзаж"
-                  class="slider__image slider__image--4"
-                >
-              </div>
+              <img
+                src="./images/Rectangle 13.4.png" alt="Морський пейзаж"
+                class="slider__picture slider__picture--4"
+              >
+              <label for="select-4" class="slider__button slider__button--4"></label>
             </div>
           </div>
-        </div>
-
-        <div class="slider__menu">
-          <label for="select-1" class="slider__button slider__button--1"></label>
-          <label for="select-2" class="slider__button slider__button--2"></label>
-          <label for="select-3" class="slider__button slider__button--3"></label>
-          <label for="select-4" class="slider__button slider__button--4"></label>
         </div>
       </section>
 
