--- a/src/index.html
+++ b/src/index.html
@@ -388,7 +388,7 @@
           </div>
 
           <div class="footer__scroll-link-wraper">
-            <a href="/" class="footer__scroll-link"></a>
+            <a href="#" class="footer__scroll-link"></a>
           </div>
 
           <div class="grid-footer__item footer__line grid-footer__item--mobile-1-2 grid-footer__item--tablet-2-5 grid-footer__item--desktop-7-7">
