--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="images/title-icon.svg"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +41,7 @@
                 <br>
                 музей
               </h1>
-              <a href="#" class="museum__tickets">
+              <a href="#events" class="museum__tickets">
                 <div class="museum__tickets-booking">Квитки</div>
                 <div class="museum__tickets-join">&gt;</div>
               </a>
@@ -187,7 +192,7 @@
         </div>
       </section>
 
-      <section class="follow">
+      <section class="follow" id="follow">
         <form action="" class="follow__form">
           <h2 class="follow__title">Підписка</h2>
           <p class="follow__description">
@@ -198,6 +203,7 @@
               type="email"
               class="follow__input"
               placeholder="E-mail"
+              required
             >
             <button type="submit" class="follow__button">&gt;</button>
           </div>
@@ -218,7 +224,12 @@
             </div>
 
             <div class="footer__networks">
-              <a href="#" class="footer__link">
+              <a
+                href="https://www.facebook.com/namu.museum"
+                class="footer__link"
+                target="_blank"
+                rel="noopener"
+              >
                 <svg
                   width="12"
                   height="24"
@@ -233,7 +244,11 @@
                   </path>
                 </svg>
               </a>
-              <a href="#" class="footer__link">
+              <a
+              href="https://www.instagram.com/namu.museum/" class="footer__link"
+              target="_blank"
+              rel="noopener"
+              >
                 <svg
                   width="25"
                   height="24"
@@ -348,7 +363,7 @@
           </div>
 
           <div class="footer__nav grid__item--2-2 grid__item--tablet-5-6 grid__item--desktop-10-11">
-            <a href="#" class="footer__nav-link">Про нас</a>
+            <a href="#follow" class="footer__nav-link">Про нас</a>
             <a href="#contacts" class="footer__nav-link">Контакти</a>
           </div>
 
