fix with auto-fill and new idea with header

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,10 @@
       </picture>
       <div class="container">
         <div class="header__content grid ">
+
+          <div class="header__reserve-background grid__item--desktop-6-12">
+          </div>
+
           <div class="header__nav grid__item--tablet-1-6 grid__item--desktop-1-12">
             <a href="#menu">
               <img src="./images/menu.svg" alt="menu">
